<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/Livro_Layout"
        android:layout_width="354dp"
        android:layout_height="628dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iconeImagem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/capa_livro" />

        <TextView
            android:id="@+id/Autores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Texto_Autores"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/texto_Autores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/Editora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editora"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/texto_editora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <TextView
            android:id="@+id/ISBN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/isbn"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Num_ISBN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/voltar" />

    </LinearLayout>

    <TextView
        android:id="@+id/textoNome"
        android:layout_width="259dp"
        android:layout_height="30dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/Livro_Layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>